tooling/vscode/stratos-language/csharp/SemanticLanguageGrammar/SLGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SLGrammar.g4 by ANTLR 4.6.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SemanticLanguageGrammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.5")]
[System.CLSCompliant(false)]
public partial class SLGrammarParser : Parser {
	public const int
		Colon=1, Semicolon=2, Comma=3, Point=4, Variable=5, Const=6, Length=7, 
		Let=8, Return=9, Input=10, Output=11, Call=12, If=13, Then=14, Else=15, 
		While=16, Repeat=17, Elseif=18, Do=19, Raw=20, AddOp=21, SubOp=22, MulOp=23, 
		DivOp=24, ModOp=25, BoolOr=26, BoolAnd=27, BoolEq=28, BoolNeq=29, BoolG=30, 
		BoolL=31, BoolGeq=32, BoolLeq=33, BoolNot=34, ModuleToken=35, ImportToken=36, 
		Start=37, End=38, Function=39, Procedure=40, Using=41, LBrace=42, RBrace=43, 
		LSBrace=44, RSBrace=45, LABrace=46, RABrace=47, AssignToken=48, New=49, 
		Nil=50, Pointer=51, ArrayToken=52, FunctionArgModifier=53, AccessModifier=54, 
		Class=55, Inherit=56, Base=57, Abstract=58, Override=59, SimpleType=60, 
		IntValue=61, RealValue=62, BoolValue=63, Id=64, StringLiteral=65, Comment=66, 
		Ws=67;
	public const int
		RULE_typeName = 0, RULE_ptrType = 1, RULE_scalarType = 2, RULE_functionalType = 3, 
		RULE_simpleType = 4, RULE_functionType = 5, RULE_procedureType = 6, RULE_functionalArgList = 7, 
		RULE_functionalArg = 8, RULE_arrayType = 9, RULE_arrayDimention = 10, 
		RULE_start = 11, RULE_moduleImportList = 12, RULE_moduleImport = 13, RULE_module = 14, 
		RULE_moduleDeclare = 15, RULE_base_head = 16, RULE_inherit_head = 17, 
		RULE_classDeclare = 18, RULE_classStatements = 19, RULE_methodDeclare = 20, 
		RULE_thisHeader = 21, RULE_methodFuncAbstract = 22, RULE_methodProcAbstract = 23, 
		RULE_methodFuncDeclare = 24, RULE_methodProcDeclare = 25, RULE_fieldDeclare = 26, 
		RULE_functionDeclare = 27, RULE_procedureDeclare = 28, RULE_varModuleDeclare = 29, 
		RULE_functionalDeclareArgList = 30, RULE_functionalDeclareArg = 31, RULE_moduleEntry = 32, 
		RULE_statementSeq = 33, RULE_statement = 34, RULE_simpleStatement = 35, 
		RULE_complexStatement = 36, RULE_declare = 37, RULE_constDeclare = 38, 
		RULE_varDeclare = 39, RULE_scalarDeclare = 40, RULE_arrayDeclare = 41, 
		RULE_ptrDeclare = 42, RULE_arrayDeclareType = 43, RULE_arrayDeclareDimention = 44, 
		RULE_arrayElement = 45, RULE_arrayLenProperty = 46, RULE_let = 47, RULE_simpleLet = 48, 
		RULE_arrayLet = 49, RULE_using = 50, RULE_return_val = 51, RULE_input = 52, 
		RULE_output = 53, RULE_outputArgument = 54, RULE_call = 55, RULE_callArgList = 56, 
		RULE_callArg = 57, RULE_call_func = 58, RULE_if_cond = 59, RULE_while_cond = 60, 
		RULE_repeat = 61, RULE_mathExpression = 62, RULE_mathTerm = 63, RULE_mathFactor = 64, 
		RULE_boolExpression = 65, RULE_boolAnd = 66, RULE_boolEquality = 67, RULE_boolInequality = 68, 
		RULE_boolFactor = 69, RULE_newExp = 70, RULE_ptrExpAtom = 71, RULE_expAtom = 72, 
		RULE_id = 73, RULE_array = 74, RULE_exp = 75, RULE_raw = 76, RULE_any = 77;
	public static readonly string[] ruleNames = {
		"typeName", "ptrType", "scalarType", "functionalType", "simpleType", "functionType", 
		"procedureType", "functionalArgList", "functionalArg", "arrayType", "arrayDimention", 
		"start", "moduleImportList", "moduleImport", "module", "moduleDeclare", 
		"base_head", "inherit_head", "classDeclare", "classStatements", "methodDeclare", 
		"thisHeader", "methodFuncAbstract", "methodProcAbstract", "methodFuncDeclare", 
		"methodProcDeclare", "fieldDeclare", "functionDeclare", "procedureDeclare", 
		"varModuleDeclare", "functionalDeclareArgList", "functionalDeclareArg", 
		"moduleEntry", "statementSeq", "statement", "simpleStatement", "complexStatement", 
		"declare", "constDeclare", "varDeclare", "scalarDeclare", "arrayDeclare", 
		"ptrDeclare", "arrayDeclareType", "arrayDeclareDimention", "arrayElement", 
		"arrayLenProperty", "let", "simpleLet", "arrayLet", "using", "return_val", 
		"input", "output", "outputArgument", "call", "callArgList", "callArg", 
		"call_func", "if_cond", "while_cond", "repeat", "mathExpression", "mathTerm", 
		"mathFactor", "boolExpression", "boolAnd", "boolEquality", "boolInequality", 
		"boolFactor", "newExp", "ptrExpAtom", "expAtom", "id", "array", "exp", 
		"raw", "any"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "';'", "','", "'.'", "'variable'", "'const'", "'length'", 
		"'let'", "'return'", "'input'", "'output'", "'call'", "'if'", "'then'", 
		"'else'", "'while'", "'repeat'", "'elseif'", "'do'", "'raw'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", 
		"'<='", "'!'", "'module'", "'import'", "'start'", "'end'", "'function'", 
		"'procedure'", "'using'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':='", 
		"'new'", "'nil'", "'pointer'", "'array'", null, null, "'class'", "'inherit'", 
		"'base'", "'abstract'", "'override'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Colon", "Semicolon", "Comma", "Point", "Variable", "Const", "Length", 
		"Let", "Return", "Input", "Output", "Call", "If", "Then", "Else", "While", 
		"Repeat", "Elseif", "Do", "Raw", "AddOp", "SubOp", "MulOp", "DivOp", "ModOp", 
		"BoolOr", "BoolAnd", "BoolEq", "BoolNeq", "BoolG", "BoolL", "BoolGeq", 
		"BoolLeq", "BoolNot", "ModuleToken", "ImportToken", "Start", "End", "Function", 
		"Procedure", "Using", "LBrace", "RBrace", "LSBrace", "RSBrace", "LABrace", 
		"RABrace", "AssignToken", "New", "Nil", "Pointer", "ArrayToken", "FunctionArgModifier", 
		"AccessModifier", "Class", "Inherit", "Base", "Abstract", "Override", 
		"SimpleType", "IntValue", "RealValue", "BoolValue", "Id", "StringLiteral", 
		"Comment", "Ws"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SLGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SLGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class TypeNameContext : ParserRuleContext {
		public ScalarTypeContext scalarType() {
			return GetRuleContext<ScalarTypeContext>(0);
		}
		public ArrayTypeContext arrayType() {
			return GetRuleContext<ArrayTypeContext>(0);
		}
		public TypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterTypeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitTypeName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNameContext typeName() {
		TypeNameContext _localctx = new TypeNameContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_typeName);
		try {
			State = 158;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case Function:
			case Procedure:
			case Pointer:
			case SimpleType:
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 156; scalarType();
				}
				break;
			case ArrayToken:
				EnterOuterAlt(_localctx, 2);
				{
				State = 157; arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PtrTypeContext : ParserRuleContext {
		public ITerminalNode Pointer() { return GetToken(SLGrammarParser.Pointer, 0); }
		public ITerminalNode LBrace() { return GetToken(SLGrammarParser.LBrace, 0); }
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public ITerminalNode RBrace() { return GetToken(SLGrammarParser.RBrace, 0); }
		public PtrTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ptrType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterPtrType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitPtrType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPtrType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PtrTypeContext ptrType() {
		PtrTypeContext _localctx = new PtrTypeContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_ptrType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 160; Match(Pointer);
			State = 165;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==LBrace) {
				{
				State = 161; Match(LBrace);
				State = 162; id();
				State = 163; Match(RBrace);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScalarTypeContext : ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return GetRuleContext<SimpleTypeContext>(0);
		}
		public FunctionalTypeContext functionalType() {
			return GetRuleContext<FunctionalTypeContext>(0);
		}
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public PtrTypeContext ptrType() {
			return GetRuleContext<PtrTypeContext>(0);
		}
		public ScalarTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scalarType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterScalarType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitScalarType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScalarType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScalarTypeContext scalarType() {
		ScalarTypeContext _localctx = new ScalarTypeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_scalarType);
		try {
			State = 171;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case SimpleType:
				EnterOuterAlt(_localctx, 1);
				{
				State = 167; simpleType();
				}
				break;
			case Function:
			case Procedure:
				EnterOuterAlt(_localctx, 2);
				{
				State = 168; functionalType();
				}
				break;
			case Id:
				EnterOuterAlt(_localctx, 3);
				{
				State = 169; id();
				}
				break;
			case Pointer:
				EnterOuterAlt(_localctx, 4);
				{
				State = 170; ptrType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionalTypeContext : ParserRuleContext {
		public ProcedureTypeContext procedureType() {
			return GetRuleContext<ProcedureTypeContext>(0);
		}
		public FunctionTypeContext functionType() {
			return GetRuleContext<FunctionTypeContext>(0);
		}
		public FunctionalTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionalType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterFunctionalType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitFunctionalType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionalType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionalTypeContext functionalType() {
		FunctionalTypeContext _localctx = new FunctionalTypeContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_functionalType);
		try {
			State = 175;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case Function:
				EnterOuterAlt(_localctx, 1);
				{
				State = 173; procedureType();
				}
				break;
			case Procedure:
				EnterOuterAlt(_localctx, 2);
				{
				State = 174; functionType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleTypeContext : ParserRuleContext {
		public ITerminalNode SimpleType() { return GetToken(SLGrammarParser.SimpleType, 0); }
		public SimpleTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterSimpleType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitSimpleType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleTypeContext simpleType() {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_simpleType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177; Match(SimpleType);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionTypeContext : ParserRuleContext {
		public ITerminalNode Procedure() { return GetToken(SLGrammarParser.Procedure, 0); }
		public FunctionalArgListContext functionalArgList() {
			return GetRuleContext<FunctionalArgListContext>(0);
		}
		public ITerminalNode Colon() { return GetToken(SLGrammarParser.Colon, 0); }
		public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public FunctionTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterFunctionType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitFunctionType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionTypeContext functionType() {
		FunctionTypeContext _localctx = new FunctionTypeContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_functionType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 179; Match(Procedure);
			State = 180; functionalArgList();
			State = 181; Match(Colon);
			State = 182; typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcedureTypeContext : ParserRuleContext {
		public ITerminalNode Function() { return GetToken(SLGrammarParser.Function, 0); }
		public FunctionalArgListContext functionalArgList() {
			return GetRuleContext<FunctionalArgListContext>(0);
		}
		public ProcedureTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procedureType; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterProcedureType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitProcedureType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProcedureType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProcedureTypeContext procedureType() {
		ProcedureTypeContext _localctx = new ProcedureTypeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_procedureType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184; Match(Function);
			State = 185; functionalArgList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionalArgListContext : ParserRuleContext {
		public ITerminalNode LBrace() { return GetToken(SLGrammarParser.LBrace, 0); }
		public ITerminalNode RBrace() { return GetToken(SLGrammarParser.RBrace, 0); }
		public FunctionalArgContext[] functionalArg() {
			return GetRuleContexts<FunctionalArgContext>();
		}
		public FunctionalArgContext functionalArg(int i) {
			return GetRuleContext<FunctionalArgContext>(i);
		}
		public ITerminalNode Comma() { return GetToken(SLGrammarParser.Comma, 0); }
		public FunctionalArgListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionalArgList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.EnterFunctionalArgList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISLGrammarListener typedListener = listener as ISLGrammarListener;
			if (typedListener != null) typedListener.ExitFunctionalArgList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISLGrammarVisitor<TResult> typedVisitor = visitor as ISLGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionalArgList(this);
			else return visitor.VisitChildren(this);
		}
	}
